--- a/data/data-analysis.ipynb
+++ b/data/data-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
      "text": [
       "           id  bedrooms bathrooms floors  waterfront  view  condition  grade  \\\n",
       "0  7129300520         3         1      1           0     0          3      7   \n",
-      "1  6414100192         3         2      2           0     0          3      7   \n",
+      "1  6414100192         3      2,25      2           0     0          3      7   \n",
       "2  5631500400         2         1      1           0     0          3      6   \n",
       "3  2487200875         4         3      1           0     0          5      7   \n",
       "4  1954400510         3         2      1           0     0          3      8   \n",
@@ -165,6 +165,47 @@
     "df = df.drop(columns = ['sqft_above','sqft_basement','sqft_living','sqft_lot'], axis = 1)\n",
     "print(df.head())\n",
     "print(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0        1955\n",
+      "1        1991\n",
+      "2        1933\n",
+      "3        1965\n",
+      "4        1987\n",
+      "         ... \n",
+      "21592    2009\n",
+      "21593    2014\n",
+      "21594    2009\n",
+      "21595    2004\n",
+      "21596    2008\n",
+      "Name: yr_built, Length: 21597, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(df['yr_renovated'])):\n",
+    "    if df['yr_renovated'][i] != 0:\n",
+    "        df['yr_built'][i] = df['yr_renovated'][i]\n",
+    "df = df.drop(columns=['yr_renovated'],axis= 1)\n",
+    "print(df['yr_built'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('csv_limpio.csv')"
    ]
   }
  ],
